Added basic tests for tagComponent

--- a/python/aristotle-metadata-registry/aristotle_mdr/tests/jstests.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/tests/jstests.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-template-compiler@2.5.17/browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@vue/test-utils@1.0.0-beta.25/dist/vue-test-utils.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/taggle@1.14.0/src/taggle.min.js"></script>
   <script src="../static/aristotle_mdr/itemPage.js"></script>
 
   <script>mocha.setup('bdd')</script>
