--- a/python/aristotle-metadata-registry/aristotle_mdr/tests/jstests.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/tests/jstests.html
@@ -15,9 +15,11 @@
   <script src="https://cdn.jsdelivr.net/npm/@vue/test-utils@1.0.0-beta.25/dist/vue-test-utils.iife.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/taggle@1.14.0/src/taggle.min.js"></script>
   <script src="../static/aristotle_mdr/itemPage.js"></script>
+  <script src="../contrib/favourites/static/aristotle_favourites/vue/tagPage.js"></script>
 
   <script>mocha.setup('bdd')</script>
   <script src="js/test.itemPage.js"></script>
+  <script src="../contrib/favourites/test.tagPage.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.run();
